--- a/templates/base.html
+++ b/templates/base.html
@@ -1,28 +1,38 @@
 {% extends 'bootstrap/base.html'%}
 
 {% block title %}
-	{{ title }} Earicle
+{{ title }} Earicle
 {% endblock %}
 
 {% block navbar %}
-	<nav class='navbar navbar-default'>
-		<div class='container'>
+<nav class='navbar navbar-inverse navbar-fixed-top justify-content-center '>
+	<div class='container'>
+		<div class='navbar-header'>
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
+				aria-expanded='false'>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
 			<a class='navbar-brand' href='#'>Earicle</a>
-			<ul>
-				<li><a href='#'>Home</a></li>
-				<li><a href='#'>About</a></li>
-				<li><a href='#'>Blog</a></li>
+		</div>
+		<div class="collapse navbar-collapse">
+			<ul class='nav navbar-nav'>
+				<li class='nav-item'><a class='nav-link' href='#'>Home</a></li>
+				<li class='nav-item'><a class='nav-link' href='#'>About</a></li>
+				<li class='nav-item'><a class='nav-link' href='#'>Read</a></li>
 			</ul>
 			<button type='button' class=''>
 				<a href='#'>Subscribe</a>
 			</button>
 		</div>
-	</nav>
+	</div>
+</nav>
 {% endblock %}
 
 {% block content %}
-	<div class='container'>
-		{% block app_content %}
-		{% endblock %}
-	</div>
+<div class='container'>
+	{% block app_content %}
+	{% endblock %}
+</div>
 {% endblock %}
