--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -2,6 +2,28 @@
     top:5em;
 }
 
-.footer {
-    height: 100px;
+body {
+    height: 100%;
+    padding-bottom: 80px;
+  }
+  
+  .footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    background: #fafafa;
+    border-top: solid 1px #eee;
+  }
+  
+  .footer p {
+    margin-top: 30px;
+  }
+
+  .social-links a {
+	font-size: 30px;
+	padding: 15px;
+	margin-bottom: 0;
+	display: inline-block;
+	color: black;
 }
