--- a/templates/earicle.html
+++ b/templates/earicle.html
@@ -2,17 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="static/styles/index.css">
-    <title>Document</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"> -->
+    <link rel="stylesheet" href="static/styles/index.css" <title>Document</title>
 </head>
 
 <body>
@@ -75,9 +71,12 @@
                 <p>Paragraph</p>
             </div>
 
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                Launch demo modal
-            </button>
+
+            <div class='subscribe-btn'>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    <!-- Launch demo modal -->
+                </button>
+            </div>
             <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -97,9 +96,6 @@
                                     clear: left;
                                     font: 14px Helvetica, Arial, sans-serif;
                                 }
-
-                                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-                                        We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
                             </style>
                             <div id="mc_embed_signup">
                                 <form
@@ -109,7 +105,8 @@
                                     <div id="mc_embed_signup_scroll">
                                         <h2>Subscribe to our mailing list</h2>
                                         <div class="indicates-required"><span class="asterisk">*</span> indicates
-                                            required</div>
+                                            required
+                                        </div>
                                         <div class="mc-field-group">
                                             <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
                                             </label>
@@ -130,10 +127,12 @@
                                             <ul>
                                                 <li><input type="radio" value="Tech Conference" name="MMERGE7"
                                                         id="mce-MMERGE7-0"><label for="mce-MMERGE7-0">Tech
-                                                        Conference</label></li>
+                                                        Conference</label>
+                                                </li>
                                                 <li><input type="radio" value="Facebook Ad" name="MMERGE7"
                                                         id="mce-MMERGE7-1"><label for="mce-MMERGE7-1">Facebook
-                                                        Ad</label></li>
+                                                        Ad</label>
+                                                </li>
                                                 <li><input type="radio" value="Meetup" name="MMERGE7"
                                                         id="mce-MMERGE7-2"><label for="mce-MMERGE7-2">Meetup</label>
                                                 </li>
@@ -169,61 +168,27 @@
                     </div>
                 </div>
             </div>
+        </div>
 
+
+
+        
     </main>
-    <footer class="footer">
-        <div class="container">
+    <footer class='footer'>
+        <div class='container'>
             <div class='row'>
-                <div class='column col-md-8'>
+                <div class='col-12'>
                     <a href='#'>About</a>
                     <a href='#'>Read</a>
                     <a href='#'>Subscribe</a>
                     <a href='#'>Contact Us</a>
                 </div>
-                <div class="column col-md-4 social-links">
-                    <a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-youtube-square" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                    <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                </div>
             </div>
         </div>
     </footer>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-
-<style>
-    .social-links a {
-        font-size: 20px;
-        padding: 10px;
-        margin-bottom: 0;
-        display: inline-block;
-        color: black;
-    }
-
-    .footer {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 80px;
-        background: lightgray;
-    }
-
-    .column.col-md-8 {
-        margin-top: 30px;
-    }
-</style>
 
 </html>
