--- a/templates/earicle.html
+++ b/templates/earicle.html
@@ -11,7 +11,7 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="static/styles/index.css">
+    <link rel="stylesheet" href="/static/styles/index.css">
     <title>Document</title>
 </head>
 
@@ -43,23 +43,23 @@
     </header>
     <main>
         <div class='container'>
-            <div class='row'>
+            <div class='row intro-container'>
                 <h1>Text Here</h1>
                 <p>Paragraph</p>
 
             </div>
 
-            <div class='row'>
+            <div class='row tech-container'>
                 <h1>Text Here</h1>
                 <p>Paragraph</p>
             </div>
 
-            <div class='row'>
+            <div class='row use-container'>
                 <h1>Text Here</h1>
                 <p>Paragraph</p>
             </div>
 
-            <div class='row'>
+            <div class='row compare-container'>
                 <div class='column col-md-6'>
                     <h3>Text Here</h3>
                     <p>Paragraph</p>
@@ -70,7 +70,7 @@
                 </div>
             </div>
 
-            <div class='row'>
+            <div class='row signoff-container'>
                 <h1>Text Here</h1>
                 <p>Paragraph</p>
             </div>
@@ -205,24 +205,13 @@
 </body>
 
 <style>
-    .social-links a {
-        font-size: 20px;
-        padding: 10px;
-        margin-bottom: 0;
-        display: inline-block;
-        color: black;
+    h1,
+    p {
+        text-align: center;
     }
 
-    .footer {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 80px;
-        background: lightgray;
-    }
-
-    .column.col-md-8 {
-        margin-top: 30px;
+    .row {
+        background-image: url();
     }
 </style>
 
