--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,7 @@ body {
    
     background-image: url(../images/sample.jpg);
     background-size: cover;
-    height: 20em;
+    height: 100%;
 }
 
 h1, h2, h3, h4, p {
