--- a/css/index.css
+++ b/css/index.css
@@ -78,14 +78,6 @@ Footer
     margin-top: 30px;
   } */
 
-  .social-links a {
-	font-size: 30px;
-	padding: 15px;
-	margin-bottom: 0;
-	display: inline-block;
-	color: black;
-}
-
 
 
 html {
@@ -100,8 +92,21 @@ html #footer {
   width: 100%;
   position: absolute;
   height: 60px;
-  background-color: #f5f5f5;
+  background-color: black;
 }
 html #footer .footer-block {
   margin-top: 20px;
+}
+
+.social-links a, .footer-box {
+	font-size: 30px;
+	padding: 15px;
+	margin-bottom: 0;
+	display: inline-block;
+  color: white;
+  text-align: center;
+}
+
+.footer-box {
+  text-align: center;
 }
